Bug 246093 - Default profile not selected for qif import
Summary: Default profile not selected for qif import
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-07-29 00:18 UTC by David Houlden
Modified: 2010-07-30 20:41 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
backtrace from crash when deleting QIF profile (8.13 KB, text/plain)
2010-07-30 17:59 UTC, David Houlden
Details

Note You need to log in before you can comment on or make changes to this bug.
Description David Houlden 2010-07-29 00:18:53 UTC
Version:           unspecified (using KDE 4.4.5) 
OS:                Linux

Running SVN1156292
When the QIF Import dialog opens, the QIF Profile is always blank and I have to select the default profile. On version 1 the default profile is already selected when the dialog opens.

Reproducible: Always



Expected Results:  
The dialog should open with the default profile (or last one used) already selected.
Comment 1 Alvaro Soliverez 2010-07-30 04:45:41 UTC
SVN commit 1156902 by asoliverez:

Select the QIF profile from the settings.
Also fixed a crash when creating a new QIF profile.
Please test carefully

BUG:246093

 M  +6 -10     kimportdlg.cpp  
 M  +0 -2      kimportdlg.h  
 M  +3 -4      mymoneyqifprofileeditor.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1156902
Comment 2 David Houlden 2010-07-30 17:59:17 UTC
Created attachment 49688 [details]
backtrace from crash when deleting QIF profile

Testing Alvaro's patch I found the following.

The QIF Import dialog now opens with the Default profile selected. This happens even if other profiles are set up and one of these was used last. I am not sure from Alvaro's description if this is the expected behavior.

I set up some new profiles then tried to delete one in the profile editor and got a crash with the attached backtrace. This is repeatable.
Comment 3 Thomas Baumgart 2010-07-30 20:41:00 UTC
SVN commit 1157340 by tbaumgart:

BUG: 246093

 M  +6 -4      mymoneyqifprofileeditor.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1157340