Select the QIF profile from the settings. Also fixed a crash when creating a new QIF profile. Please test carefully

BUG:246093

svn path=/trunk/extragear/office/kmymoney/; revision=1156902